--- a/main.html
+++ b/main.html
@@ -8,7 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<b> What is the capital of India? </b><br><br>
+
+	New Delhi<input type="radio" name="city">
+
+	Mumbai<input type="radio"name="city">
+	
+	<div>
+	<blackquote cite="https://en.wikipedia.org/wiki/New_Delhi"> New Delhi is the capital of India and an administrative district of NCT Delhi.</blackquote>
+    </div>
+	
+	
+    
+		
+	
 </script>
 
 </body>
