--- a/main.html
+++ b/main.html
@@ -8,22 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<b> What is the capital of India? </b><br><br>
+	<h1> What is the capital of India? </h1><br><br>
+<form>
+	<div><input type="radio" name='capital' value='new_delhi' onclick="">New Delhi</div>
+	<div><input type="radio" name='capital' value='Mumbai' onclick="">Mumbai</div>
 
-	New Delhi<input type="radio" name="city">
-
-	Mumbai<input type="radio"name="city">
+</form>
 	
-	<div>
+	<div id ="name">
 	<blackquote cite="https://en.wikipedia.org/wiki/New_Delhi"> New Delhi is the capital of India and an administrative district of NCT Delhi.</blackquote>
     </div>
 	
 	
-    
-		
-	
-</script>
-
-</body>
+    </body>
 
 </html>
