--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 </form>
 	
 	<div id ="name">
-	<blackquote cite="https://en.wikipedia.org/wiki/New_Delhi"> New Delhi is the capital of India and an administrative district of NCT Delhi.</blackquote>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi"> New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
     </div>
 	
 	
